Fix anchor jump

--- a/_sass/base/global.scss
+++ b/_sass/base/global.scss
@@ -103,3 +103,12 @@ hr.small {
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
   padding: 2em 2em;
 }
+
+*[id]:before 
+{ 
+  display: block; 
+  content: " "; 
+  margin-top: -115px; 
+  height: 115px; 
+  visibility: hidden; 
+}
